# mindful-makers-deep-listening-sdk

./: .env.example  .gitignore  README.md  pyproject.toml
elevenlabs_sdk/: README.md  __init__.py  example.py  example_music.py  generator.py
freesound_sdk/: README.md  __init__.py  client.py  example.py
librosa_sdk/: README.md  __init__.py  analyzer.py  example.py
recording_sdk/: README.md  __init__.py  example.py  recorder.py
webaudio_sdk/: README.md  __init__.py  binaural.py  example.py  generate_binaural.py  playback.py
